--- a/skyfolk/templates/account/reccomendation_after_login.html
+++ b/skyfolk/templates/account/reccomendation_after_login.html
@@ -11,6 +11,7 @@
             <h3 class="grey-text darken-1 center-align">Puedes empezar siguiendo a estos perfiles... </h3>
         </div>
         <div class="row">
+        {% if object_list %}
             {% for user in object_list %}
                 <div class="col s12 m12 l4">
                     <div class="card white">
@@ -45,6 +46,9 @@
                     </div>
                 </div>
             {% endfor %}
+            {% else %}
+            <p class="center">No hemos podido encontrar a nadie con tus intereses, ¡debes ser muy especial!</p>
+        {% endif %}
             <div class="row">
                 <div class="col s12">
                     <div class="divider"></div>
