+ V6 + Add response to publication in detail view

--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -83,6 +83,9 @@
                                 </ul>
                             </div>
                         </div>
+                        {% with publication as pub %}
+                            {% include "account/new_reply.html" %}
+                        {% endwith %}
                     </div>
                 </div>
             </div>
