--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -95,8 +95,8 @@ a, a:visited {
     cursor: pointer;
     box-shadow: 0 1px 5px rgba(30, 136, 229, 0.15);
     padding: 0 0;
-    width: 20%;
-    height: 20%;
+    width: 10%;
+    height: 10%;
     border-radius: 3px;
     overflow: hidden;
 }
@@ -437,20 +437,6 @@ span[class*="heart"]:hover {
     background: rgba(48, 164, 209, 0.3);
 }
 
-.caja {
-    display: inline-block;
-    width: 90px;
-    height: 20px;
-    vertical-align: top;
-    margin: 1em 1.5em 2em 0;
-    cursor: pointer;
-    position: relative;
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
-}
-
 .item:hover img {
     box-shadow: none;
 }
@@ -462,24 +448,21 @@ span[class*="heart"]:hover {
 
 .item img {
     position: relative;
-    margin: auto;
+    top: 0;
     border-radius: 3px;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
 }
 
 .item .informacion {
     display: block;
-    position: absolute;
-    top: -13.5em;
-    left: -46px;
     height: 76px;
     width: 210px;
     padding: 0;
+    margin-left: -45px;
     font-size: 12px;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
     box-shadow: none;
     background: rgb(236, 241, 244);
-    margin-top: 70px;
     opacity: 0.7;
 }
 
@@ -750,7 +733,7 @@ a.fontawesome-cog:hover {
 
 .wrapper-reply .enviar {
     margin-right: 2%;
-    margin-top: -7%;
+    margin-top: -4%;
     margin-bottom: 1.25%;
 }
 
