--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -26,14 +26,14 @@ button::-moz-focus-inner
   border: 0
 
 /* IMPORTANTE PARA CONSERVAR LOS BORDES DE LA INTERFAZ */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video
+html, body, div, span, applet, object, iframe, .header, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video
   margin: 0
   padding: 0
   border: 0
   font: inherit
   vertical-align: baseline
 
-article, aside, details, figcaption, figure, footer, header, menu, nav, section
+article, aside, details, figcaption, figure, footer, header, menu, nav, section, .header
   display: block
 
 body
@@ -54,7 +54,7 @@ table
 
 .container
   *zoom: 1
-  max-width: 1200px
+  max-width: 100%
   margin-left: auto
   margin-right: auto
 
@@ -87,7 +87,9 @@ body > .container
 @media only screen and (min-width: 1220px)
   body > .container
     font-size: 1.1em
-    max-width: 1650px
+    max-width: 99%
+  .user-stats
+    margin-left: 0.5% !important
 
 /* LOADER */
 
