--- a/skyfolk/templates/about/entry_list_page.html
+++ b/skyfolk/templates/about/entry_list_page.html
@@ -6,7 +6,7 @@
     {% for pub in publications_blog %}
         <div class="col s12">
           <div class="card">
-            <div class="card-content blue lighten-2">
+            <div class="card-content blue lighten-2 clearfix">
               <span class="card-title">
                   {% for tag in pub.tags.all %}
                   <span class="chip">
@@ -14,7 +14,10 @@
                   </span>
                   {% endfor %}
               </span><br><br>
-              <p class="flow-text">{{ pub.content }}.</p>
+              <p class="flow-text">{{ pub.content|safe }}</p>
+                {% if pub.image %}
+                    <img src="{{ pub.image.url }}" width="300" height="300">
+                {% endif %}
             </div>
             <div class="card-action">
               <a href="{% url 'user_profile:profile' pub.author.username %}">@{{ pub.author.username }}</a>
