--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/publication_detail.css">
 {% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="container" id="publication-thread">
         <div class="row">
             <div class="col s12">
                 <div class="row">
