--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -54,7 +54,7 @@ a, a:visited {
     float: left;
     left: 37px;
     position: relative;
-    width: 70%;
+    width: 80%;
     border-bottom: 1px solid #eee;
     margin-top: 20px;
     margin-bottom: 12px;
@@ -606,7 +606,7 @@ a.fontawesome-cog:hover {
 .options_comentarios {
     position: relative;
     display: block;
-    width: 90%;
+    width: 100%;
     height: auto;
 }
 
@@ -764,6 +764,7 @@ a.fontawesome-cog:hover {
 
 .wrapper-reply .reply-options ul .fa-stack {
     margin-top: 1.25%;
+    top: -4px;
 }
 
 .hate-with-values {
@@ -827,6 +828,7 @@ a.fontawesome-cog:hover {
     width: 80%;
     height: 100%;
     position: relative;
+    word-wrap: break-word;
 }
 
 .hidden {
