--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -171,7 +171,7 @@ body > .container {
   width: 100%;
   height: 100%; }
 .nav-vertical-and-chat .nav-vertical-controls {
-  position: absolute;
+  position: relative;
   display: block;
   height: 120px;
   bottom: 0;
@@ -180,7 +180,8 @@ body > .container {
     position: relative;
     list-style-type: none;
     text-align: center;
-    margin-top: 5%; }
+    margin-top: 20%;
+    display: block; }
     .nav-vertical-and-chat .nav-vertical-controls .controls-notifications .nav-button-notifications, .nav-vertical-and-chat .nav-vertical-controls .controls-notifications .nav-button-notifications:visited {
       display: inline-block;
       height: 36px;
