--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -191,7 +191,7 @@ body > .container
     width: 100%
     height: 100%
   & .nav-vertical-controls
-    position: absolute
+    position: relative
     display: block
     height: 120px
     bottom: 0
@@ -200,7 +200,8 @@ body > .container
       position: relative
       list-style-type: none
       text-align: center
-      margin-top: 5%
+      margin-top: 20%
+      display: block
       & .nav-button-notifications, .nav-button-notifications:visited
         display: inline-block
         height: 36px
