--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -6,10 +6,12 @@
 
 {% paginate publications %}
 {% for pub in publications %}
-<div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
-	<div class="box">
-		<span id="check-{{ pub.pk }}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
-		<!-- Check para ampliar el mensaje... -->
+    <div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
+        <div class="box">
+            <span id="check-{{ pub.pk }}" class="zoom-pub tooltipped" data-position="bottom" data-delay="50"
+                                  data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
+            <!-- Check para ampliar el mensaje... -->
+            {% comment %}
 		<div class="ampliado" id="expand-{{ pub.pk }}">
 			<div class="cerrar_ampliado"><i class="fa fa-close"></i></div>
 			<div class="nombre_image">
@@ -25,9 +27,9 @@
 				{{ pub.content|replace_decorators|safe }}
 			</div>
 			<div class="wrapper-reply">
-				{% comment %}
+
 				{% include "account/new_reply.html" %}
-				{% endcomment %}
+
 				<!-- RESPUESTAS A COMENTARIOS -->
 				{% for reply in pub.replies %}
 				<div class="comment-reply">
@@ -38,105 +40,108 @@
 				</div>
 				{% endfor %}
 			</div>
-		</div>
-		<div class="image">
-			<div class="usr-img img-responsive">{% avatar pub.author %}</div>
-		</div>
-	</div>
-	<div class="articulo">
-		<h2 class="h22"><a href="/profile/{{ pub.author.username }}">{{ pub.author.username }}</a> ha comentado:
-		</h2>
-		<div class="parrafo comment">
-			<a target="_blank">{{ pub.created|naturaltime }}</a><br>
-			<div class="wrp-comment">{{ pub.content|replace_decorators|safe }}</div>
-		</div>
-		<div class="show-more" id="show-comment-{{ pub.pk }}">
-			<a href="#">+ Mostrar más</a>
-		</div>
-		<!-- OPCIONES DE COMENTARIOS -->
-		<div class="options_comentarios" id="options-comments">
-			<ul class="opciones">
-				{% if user.is_authenticated and user.username == pub.author.username %}
-				<!-- Si estamos visitando un perfil que no es el nuestro -->
-				<li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
-				{% elif user.is_authenticated and user.username == user_profile.username %}
-				<!-- Si estamos visitando nuestro propio perfil -->
-				<li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
-				{% endif %}
-				{% with hates=pub.pk|total_hates %}
-				{% if hates > 0 %}
-				<li title="No me gusta" class="fa-stack hate-with-values" id="fa-hate">
+
+        </div>
+        {% endcomment %}
+            <div class="image">
+                <div class="usr-img img-responsive">{% avatar pub.author %}</div>
+            </div>
+        </div>
+        <div class="articulo">
+            <h2 class="h22"><a href="/profile/{{ pub.author.username }}">{{ pub.author.username }}</a> ha comentado:
+            </h2>
+            <div class="parrafo comment">
+                <a target="_blank">{{ pub.created|naturaltime }}</a><br>
+                <div class="wrp-comment">{{ pub.content|replace_decorators|safe }}</div>
+            </div>
+            <div class="show-more" id="show-comment-{{ pub.pk }}">
+                <a href="#">+ Mostrar más</a>
+            </div>
+            <!-- OPCIONES DE COMENTARIOS -->
+            <div class="options_comentarios" id="options-comments">
+                <ul class="opciones">
+                    {% if user.is_authenticated and user.username == pub.author.username %}
+                        <!-- Si estamos visitando un perfil que no es el nuestro -->
+                        <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
+                    {% elif user.is_authenticated and user.username == user_profile.username %}
+                        <!-- Si estamos visitando nuestro propio perfil -->
+                        <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
+                    {% endif %}
+                    {% with hates=pub.pk|total_hates %}
+                        {% if hates > 0 %}
+                            <li title="No me gusta" class="fa-stack hate-with-values" id="fa-hate">
 					<span class="hate-comment">
 						<i class="fa fa-heart fa-stack-1x"></i>
 						<i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
 						<i class="fa hate-value">{{ hates|intword }}</i>
 					</span>
-				</li>
-				{% else %}
-				<li title="No me gusta" class="fa-stack" id="fa-hate">
+                            </li>
+                        {% else %}
+                            <li title="No me gusta" class="fa-stack" id="fa-hate">
 					<span class="hate-comment">
 						<i class="fa fa-heart fa-stack-1x"></i>
 						<i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
 						<i class="fa hate-value"></i>
 					</span>
-				</li>
-				{% endif %}
-				{% endwith %}
-				<li title="¡Me gusta!" class="like-comment"><i id="like-heart"
-						    class="fa fa-heart"> {{ pub.pk|total_likes|intword }}</i></li>
-				<li title="Citar" class="quote-comment"><i class="fa fa-quote-left">
-					</i></li>
-					<li title="Responder" class="reply-comment"><i class="fa fa-reply"
-						    id="reply-caja-comentario-{{ pub.pk }}"></i></li>
-					<li title="Añadir a mi timeline" class="add-timeline"><i
-				       class="fa fa-tag"> {{ pub.pk|total_shares|intword }}</i></li>
-			</ul>
-		</div>
-	</div>
-	<div class="wrapper-reply">
-		{% include "account/new_reply.html" %}
-		<!-- RESPUESTAS A COMENTARIOS -->
-		{% for reply in pub.replies %}
-		<div class="comment-reply">
-			<div class="avatar-reply">{% avatar reply.author %}</div>
-			<div class="author-reply">
-				<a href="/profile/{{ reply.author }}">{{ reply.author }}</a>
-				<i class="reply-created">{{ reply.created|naturaltime }}</i>
-			</div>
-			<div class="row">
-				<div class="content-reply">{{ reply|safe|replace_decorators|safe }}</div>
-			</div>
-			<div class="divider"></div>
-			<div class="reply-options">
-				<ul>
-					<li class="add-reply-timeline">
-						<i class="fa fa-tag"></i>
-					</li>
-					<li class="reply-reply">
-						<i class="fa fa-reply"></i>
-					</li>
-					<li class="quote-reply">
-						<i class="fa fa-quote-left"></i>
-					</li>
-					<li class="like-reply">
-						<i class="fa fa-heart"></i>
-					</li>
-					<li title="No me gusta" class="fa-stack" id="fa-hate">
+                            </li>
+                        {% endif %}
+                    {% endwith %}
+                    <li title="¡Me gusta!" class="like-comment"><i id="like-heart"
+                                                                   class="fa fa-heart"> {{ pub.pk|total_likes|intword }}</i>
+                    </li>
+                    <li title="Citar" class="quote-comment"><i class="fa fa-quote-left">
+                    </i></li>
+                    <li title="Responder" class="reply-comment"><i class="fa fa-reply"
+                                                                   id="reply-caja-comentario-{{ pub.pk }}"></i></li>
+                    <li title="Añadir a mi timeline" class="add-timeline"><i
+                            class="fa fa-tag"> {{ pub.pk|total_shares|intword }}</i></li>
+                </ul>
+            </div>
+        </div>
+        <div class="wrapper-reply">
+            {% include "account/new_reply.html" %}
+            <!-- RESPUESTAS A COMENTARIOS -->
+            {% for reply in pub.replies %}
+                <div class="comment-reply">
+                    <div class="avatar-reply">{% avatar reply.author %}</div>
+                    <div class="author-reply">
+                        <a href="/profile/{{ reply.author }}">{{ reply.author }}</a>
+                        <i class="reply-created">{{ reply.created|naturaltime }}</i>
+                    </div>
+                    <div class="row">
+                        <div class="content-reply">{{ reply|safe|replace_decorators|safe }}</div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="reply-options">
+                        <ul>
+                            <li class="add-reply-timeline">
+                                <i class="fa fa-tag"></i>
+                            </li>
+                            <li class="reply-reply">
+                                <i class="fa fa-reply"></i>
+                            </li>
+                            <li class="quote-reply">
+                                <i class="fa fa-quote-left"></i>
+                            </li>
+                            <li class="like-reply">
+                                <i class="fa fa-heart"></i>
+                            </li>
+                            <li title="No me gusta" class="fa-stack" id="fa-hate">
 						<span class="hate-comment">
 							<i class="fa fa-heart fa-stack-1x"></i>
 							<i class="fa fa-bolt fa-stack-1x fa-inverse"></i>
 							<i class="fa hate-value"></i>
 						</span>
-					</li>
-					<li class="del-reply">
-						<i class="fa fa-trash"></i>
-					</li>
+                            </li>
+                            <li class="del-reply">
+                                <i class="fa fa-trash"></i>
+                            </li>
 
-				</ul>
-			</div>
-		</div>
-		{% endfor %}
-	</div>
-</div>
+                        </ul>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endfor %}
 {% show_more %}
