--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -8,8 +8,14 @@
 {% for pub in publications %}
     <div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
         <div class="box">
-            <span id="check-{{ pub.pk }}" class="zoom-pub tooltipped" data-position="bottom" data-delay="50"
-                                  data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
+            <span id="check-{{ pub.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom" data-delay="50"
+                  data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
+            {% if user.is_authenticated and user.username == pub.author.username or user.is_authenticated and user.username == user_profile.username %}
+                <span data-id="{{ pub.pk }}" id="edit-comment-content" class="top-options edit-comment tooltipped"
+                      data-position="bottom"
+                      data-delay="50"
+                      data-tooltip="Editar comentario"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+            {% endif %}
             <!-- Check para ampliar el mensaje... -->
             {% comment %}
 		<div class="ampliado" id="expand-{{ pub.pk }}">
@@ -98,6 +104,31 @@
                 </ul>
             </div>
         </div>
+        {% if user.is_authenticated and user.username == pub.author.username or user.is_authenticated and user.username == user_profile.username %}
+            <div data-user-id="{{ pub.author.pk }}" id="author-controls-{{ pub.pk }}" class="author-controls">
+                <div class="row">
+                    <div class="col s12">
+                        <form method="post" accept-charset="utf-8">{% csrf_token %}
+                            <div class="row">
+                                {{ publication_edit.content.errors }}
+                                <div class="input-field col s12">
+                                    <i class="material-icons prefix">create</i>
+                                    {{ publication_edit.content }}
+                                    <label for="id_caption">Contenido</label>
+                                </div>
+                                <div class="row">
+                                    <button data-id="{{ pub.pk }}"
+                                            class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
+                                            type="submit" id="submit_edit_publication">Editar
+                                        <i class="material-icons right">mode_edit</i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
         <div class="wrapper-reply">
             {% include "account/new_reply.html" %}
             <!-- RESPUESTAS A COMENTARIOS -->
