--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -47,7 +47,7 @@ Template para el perfil de cada usuario
                                         <a><i class="fa fa-thumb-tack"></i></a>
                                     </div>
                                     <ul class="unstyled table fullwidth links">
-                                        <li class="tab" id="li-tab-timeline"><a href="#tab-timeline">timeline</a></li>
+                                        <li class="tab" id="li-tab-timeline"><a href="#tab-timeline">skyline</a></li>
                                         <li class="tab" id="li-tab-comentarios"><a
                                                 href="#tab-comentarios">Comentarios</a></li>
                                         <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Seguidos</a></li>
