--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -3,15 +3,17 @@
 {% load app_filters %}
 {% load humanize %}
 {% load el_pagination_tags %}
+{% load mptt_tags %}
 
 {% paginate publications %}
-{% for pub in publications %}
-    <div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
+{% recursetree publications %}
+    <div class="wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
         <div class="box">
-            <span id="check-{{ pub.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom" data-delay="50"
+            <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
+                  data-delay="50"
                   data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
-            {% if user.is_authenticated and user.username == pub.author.username or user.is_authenticated and user.username == user_profile.username %}
-                <span data-id="{{ pub.pk }}" id="edit-comment-content" class="top-options edit-comment tooltipped"
+            {% if user.is_authenticated and user.username == node.author.username or user.is_authenticated and user.username == user_profile.username %}
+                <span data-id="{{ node.pk }}" id="edit-comment-content" class="top-options edit-comment tooltipped"
                       data-position="bottom"
                       data-delay="50"
                       data-tooltip="Editar comentario"><i class="fa fa-pencil" aria-hidden="true"></i></span>
@@ -50,30 +52,30 @@
         </div>
         {% endcomment %}
             <div class="image">
-                <div class="usr-img img-responsive">{% avatar pub.author %}</div>
+                <div class="usr-img img-responsive">{% avatar node.author %}</div>
             </div>
         </div>
         <div class="articulo">
-            <h2 class="h22"><a href="/profile/{{ pub.author.username }}">{{ pub.author.username }}</a> ha comentado:
+            <h2 class="h22"><a href="/profile/{{ node.author.username }}">{{ node.author.username }}</a> ha comentado:
             </h2>
             <div class="parrafo comment">
-                <a target="_blank">{{ pub.created|naturaltime }}</a><br>
-                <div class="wrp-comment">{{ pub.content|replace_decorators|safe }}</div>
+                <a target="_blank">{{ node.created|naturaltime }}</a><br>
+                <div class="wrp-comment">{{ node.content|replace_decorators|safe }}</div>
             </div>
-            <div class="show-more" id="show-comment-{{ pub.pk }}">
+            <div class="show-more" id="show-comment-{{ node.pk }}">
                 <a href="#">+ Mostrar más</a>
             </div>
             <!-- OPCIONES DE COMENTARIOS -->
             <div class="options_comentarios" id="options-comments">
                 <ul class="opciones">
-                    {% if user.is_authenticated and user.username == pub.author.username %}
+                    {% if user.is_authenticated and user.username == node.author.username %}
                         <!-- Si estamos visitando un perfil que no es el nuestro -->
                         <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
                     {% elif user.is_authenticated and user.username == user_profile.username %}
                         <!-- Si estamos visitando nuestro propio perfil -->
                         <li class="trash-comment" title="Borrar comentario"><i class="fa fa-trash"></i></li>
                     {% endif %}
-                    {% with hates=pub.pk|total_hates %}
+                    {% with hates=node.pk|total_hates %}
                         <li title="No me gusta" class="fa-stack" id="fa-hate">
 					<span class="hate-comment">
 						<i class="fa fa-heart fa-stack-1x"></i>
@@ -84,19 +86,19 @@
                     {% endwith %}
                     <li id="like-heart" title="¡Me gusta!" class="like-comment">
                         <i class="fa fa-heart"></i>
-                        <i id="like-value" class="fa">{{ pub.pk|total_likes|intword }}</i>
+                        <i id="like-value" class="fa">{{ node.pk|total_likes|intword }}</i>
                     </li>
                     <li title="Citar" class="quote-comment"><i class="fa fa-quote-left">
                     </i></li>
                     <li title="Responder" class="reply-comment"><i class="fa fa-reply"
-                                                                   id="reply-caja-comentario-{{ pub.pk }}"></i></li>
+                                                                   id="reply-caja-comentario-{{ node.pk }}"></i></li>
                     <li title="Añadir a mi timeline" class="add-timeline"><i
-                            class="fa fa-tag"> {{ pub.pk|total_shares|intword }}</i></li>
+                            class="fa fa-tag"> {{ node.pk|total_shares|intword }}</i></li>
                 </ul>
             </div>
         </div>
-        {% if user.is_authenticated and user.username == pub.author.username or user.is_authenticated and user.username == user_profile.username %}
-            <div data-user-id="{{ pub.author.pk }}" id="author-controls-{{ pub.pk }}" class="author-controls">
+        {% if user.is_authenticated and user.username == node.author.username or user.is_authenticated and user.username == user_profile.username %}
+            <div data-user-id="{{ node.author.pk }}" id="author-controls-{{ node.pk }}" class="author-controls">
                 <div class="row">
                     <div class="col s12">
                         <form method="post" accept-charset="utf-8">{% csrf_token %}
@@ -108,7 +110,7 @@
                                     <label for="id_caption">Contenido</label>
                                 </div>
                                 <div class="row">
-                                    <button data-id="{{ pub.pk }}"
+                                    <button data-id="{{ node.pk }}"
                                             class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
                                             type="submit" id="submit_edit_publication">Editar
                                         <i class="material-icons right">mode_edit</i>
@@ -123,7 +125,7 @@
         <div class="wrapper-reply">
             {% include "account/new_reply.html" %}
             <!-- RESPUESTAS A COMENTARIOS -->
-            {% for reply in pub.reply.all %}
+            {% for reply in node.reply.all %}
                 <div class="comment-reply">
                     <div class="avatar-reply">{% avatar reply.author %}</div>
                     <div class="author-reply">
@@ -164,6 +166,11 @@
                 </div>
             {% endfor %}
         </div>
+        {% if not node.is_leaf_node %}
+        <ul class="children">
+            {{ children }}
+        </ul>
+    {% endif %}
     </div>
-{% endfor %}
+{% endrecursetree %}
 {% show_more %}
